# runbooks-testing

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  CODEOWNERS  README.md  docker-compose.yml  e2b.Dockerfile  justfile
.aviator/: OWNERS
.aviator/scripts/: preview-setup.sh
.aviator/verify/skills/: default.md  posts.md  users.md
.github/workflows/: always_fail.yaml  always_pass.yaml  flaky.yaml  pass_or_fail.yaml  test.yaml
backend_go/: Dockerfile  aviator-config.yaml  go.mod
backend_go/cmd/server/: main.go
backend_go/internal/handler/: handler.go
backend_python/: Dockerfile  aviator-config.yaml  pyproject.toml  test_health.py
backend_python/src/runbooks_testing_api/: main.py  models.py
backend_python/tests/: conftest.py  test_main.py  test_models.py
frontend/: Dockerfile  aviator-config.yaml  package.json  server.js
frontend/src/: index.html  main.js
verify/: baseline-invariants.yaml  secrets.example  seed_invariants.py
verify/cases/admin-delete/: change.sh  criteria.md
verify/cases/button-color-fail/: change.sh  criteria.md
verify/cases/button-color-pass/: change.sh  criteria.md
verify/cases/cross-user-edit/: change.sh  criteria.md
verify/cases/csrf-header/: change.sh
verify/cases/dashboard-heading/: change.sh  criteria.md
verify/cases/degraded-dashboard/: change.sh
verify/cases/go-untestable/: change.sh  criteria.md
verify/cases/leak-password/: change.sh
verify/cases/link-query-param/: change.sh
verify/cases/one-click-delete/: change.sh
verify/cases/role-in-api/: change.sh  criteria.md
verify/cases/save-token-localstorage/: change.sh
verify/cases/unescape-username/: change.sh
verify/cases/unlabeled-input/: change.sh
